--- a/ch11/03_testing/04_coverage_exchange.htm
+++ b/ch11/03_testing/04_coverage_exchange.htm
@@ -83,7 +83,7 @@ import (
 
 const (
         // request URL for the exchange rate API
-        urlFormat = "%s/api/latest?access_key=%s&amp;format=1&amp;symbols=%s"
+		urlFormat = "%s/api/historical?access_key=%s&date=2018-06-20&currencies=%s"
 
         // default price that is sent when an error occurs
         defaultPrice = 0.0
@@ -124,7 +124,7 @@ func (c *Converter) Exchange(ctx context.Context, basePrice float64, currency st
         }</span>
 
         // apply rate and round to 2 decimal places
-        <span class="cov8" title="1">return math.Floor(rate*basePrice*100) / 100, nil</span>
+        <span class="cov8" title="1">return math.Floor((basePrice/rate)*100) / 100, nil</span>
 }
 
 // load rate from the external API
@@ -177,7 +177,7 @@ func (c *Converter) extractRate(response *http.Response, currency string) (float
         }</span>
 
         // pull rate from response data
-        <span class="cov8" title="1">rate, found := data.Rates[currency]
+        <span class="cov8" title="1">rate, found := data.Quotes["USD" + currency]
         if !found </span><span class="cov0" title="0">{
                 err = fmt.Errorf("response did not include expected currency '%s'", currency)
                 c.logger().Error("[exchange] %s", err)
@@ -212,7 +212,7 @@ func (c *Converter) logger() logging.Logger <span class="cov0" title="0">{
 
 // the response format from the exchange rate API
 type apiResponseFormat struct {
-        Rates map[string]float64 `json:"rates"`
+        Quotes map[string]float64 `json:"quotes"`
 }
 </pre>
 		
