--- a/ch12/03_testing/04_coverage_register.htm
+++ b/ch12/03_testing/04_coverage_register.htm
@@ -85,7 +85,7 @@ const (
 var (
         // validation errors
         errNameMissing     = errors.New("name is missing")
-        errPhoneMissing    = errors.New("name is missing")
+        errPhoneMissing    = errors.New("phone is missing")
         errCurrencyMissing = errors.New("currency is missing")
         errInvalidCurrency = errors.New("currency is invalid, supported types are AUD, CNY, EUR, GBP, JPY, MYR, SGD, USD")
 
